<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cmfi.cantique.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_numero"
        android:name="com.cmfi.cantique.ui.numero.NumeroFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_numero" />


    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cmfi.cantique.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.cmfi.cantique.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cmfi.cantique.ui.share.ShareFragment"
        android:label="@string/menu_gallery_2"
        tools:layout="@layout/fragment_numero_en"  />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.cmfi.cantique.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>