<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanche">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:gravity="bottom"
        android:id="@+id/r"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t1"
                android:text="@string/christ_est_vainqueur"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:fontFamily="@font/alike"
                android:textColor="@color/colorBlanche"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/logo_launcher"
                android:layout_below="@id/t1"
                android:src="@drawable/guitar" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/notemusic" />


        </RelativeLayout>



        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/design">


            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="0dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_logo_cantique" />

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/s"
        android:layout_below="@+id/r"
        android:layout_above="@+id/bloc3"
        app:layout_constraintTop_toBottomOf="@+id/r">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt1"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="0dp"
                    android:textSize="16dp"
                    android:text="@string/text_info_paragraphe_1"
                    android:layout_gravity="bottom"
                    android:textColor="@color/colorNoir"
                    android:fontFamily="sans-serif"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt2"
                    app:layout_constraintTop_toBottomOf="@+id/txt1"
                    android:paddingTop="@dimen/nav_header_vertical_spacing"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_info_paragraphe_2"
                    android:layout_gravity="bottom"
                    android:textColor="@color/colorNoir"
                    android:textStyle=""
                    android:textSize="16dp"
                    android:fontFamily="sans-serif"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>



    </ScrollView>





    <LinearLayout
        android:id="@+id/bloc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="6dp"
            android:layout_height="4dp"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="CMFI/CMCI"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:layout_width="6dp"
            android:layout_height="4dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</RelativeLayout>